DROP TABLE "User" CASCADE CONSTRAINTS;
DROP TABLE UserRole CASCADE CONSTRAINTS;
